force-app/main/default/objects/Mission__c/fields/Annee_dossier__c.field-meta.xml
<CustomField>
    <fullName>Annee_dossier__c</fullName>
    <label>Année dossier</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>