force-app/main/default/objects/Mission__c/fields/CIN_patient__c.field-meta.xml
<CustomField>
    <fullName>CIN_patient__c</fullName>
    <label>CIN patient</label>
    <length>20</length>
    <type>Text</type>
</CustomField>