force-app/main/default/objects/Mission__c/fields/Code_intermediaire__c.field-meta.xml
<CustomField>
    <fullName>Code_intermediaire__c</fullName>
    <label>Code intermédiaire</label>
    <length>50</length>
    <type>Text</type>
</CustomField>