force-app/main/default/objects/Mission__c/fields/Date_cloture__c.field-meta.xml
<CustomField>
    <fullName>Date_cloture__c</fullName>
    <label>Date clôture</label>
    <type>Date</type>
</CustomField>