force-app/main/default/objects/Mission__c/fields/Date_convocation__c.field-meta.xml
<CustomField>
    <fullName>Date_convocation__c</fullName>
    <label>Date convocation</label>
    <type>Date</type>
</CustomField>