force-app/main/default/objects/Mission__c/fields/Date_de_naissance_patient__c.field-meta.xml
<CustomField>
    <fullName>Date_de_naissance_patient__c</fullName>
    <label>Date de naissance patient</label>
    <type>Date</type>
</CustomField>