force-app/main/default/objects/Mission__c/fields/Date_de_nomination__c.field-meta.xml
<CustomField>
    <fullName>Date_de_nomination__c</fullName>
    <label>Date de nomination</label>
    <type>Date</type>
</CustomField>