force-app/main/default/objects/Mission__c/fields/Date_echeance__c.field-meta.xml
<CustomField>
    <fullName>Date_echeance__c</fullName>
    <label>Date échéance</label>
    <type>Date</type>
</CustomField>