force-app/main/default/objects/Mission__c/fields/Date_hospitalisation__c.field-meta.xml
<CustomField>
    <fullName>Date_hospitalisation__c</fullName>
    <label>Date d&apos;hospitalisation</label>
    <type>Date</type>
</CustomField>