force-app/main/default/objects/Mission__c/fields/Date_survenance__c.field-meta.xml
<CustomField>
    <fullName>Date_survenance__c</fullName>
    <label>Date de survenance</label>
    <type>Date</type>
</CustomField>