force-app/main/default/objects/Mission__c/fields/Degre_de_tribunal__c.field-meta.xml
<CustomField>
    <fullName>Degre_de_tribunal__c</fullName>
    <label>Degre de tribunal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ère instance</fullName>
            </value>
            <value>
                <fullName>Cour d&apos;appel</fullName>
            </value>
            <value>
                <fullName>Cour de cassation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>