force-app/main/default/objects/Mission__c/fields/Echanges_non_lus__c.field-meta.xml
<CustomField>
    <fullName>Echanges_non_lus__c</fullName>
    <label>Échanges non lus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>