force-app/main/default/objects/Mission__c/fields/Erreur_API__c.field-meta.xml
<CustomField>
    <fullName>Erreur_API__c</fullName>
    <label>Erreur API</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>