force-app/main/default/objects/Mission__c/fields/Heure_debut__c.field-meta.xml
<CustomField>
    <fullName>Heure_debut__c</fullName>
    <label>Heure début</label>
    <length>50</length>
    <type>Text</type>
</CustomField>