force-app/main/default/objects/Mission__c/fields/Heure_debut_passage__c.field-meta.xml
<CustomField>
    <fullName>Heure_debut_passage__c</fullName>
    <label>Heure début de passage</label>
    <type>Time</type>
</CustomField>