force-app/main/default/objects/Mission__c/fields/Heure_fin__c.field-meta.xml
<CustomField>
    <fullName>Heure_fin__c</fullName>
    <label>Heure fin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>