force-app/main/default/objects/Mission__c/fields/Heure_fin_passage__c.field-meta.xml
<CustomField>
    <fullName>Heure_fin_passage__c</fullName>
    <label>Heure fin de passage</label>
    <type>Time</type>
</CustomField>