force-app/main/default/objects/Mission__c/fields/Id_Externe_API__c.field-meta.xml
<CustomField>
    <fullName>Id_Externe_API__c</fullName>
    <label>Id Externe API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>