force-app/main/default/objects/Mission__c/fields/Juridiction__c.field-meta.xml
<CustomField>
    <fullName>Juridiction__c</fullName>
    <label>Juridiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Juridiction Etrangère</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>COUR D&apos;APPEL DE RABAT</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>COUR D&apos;APPEL DE KENITRA</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>COUR D&apos;APPEL DE CASABLANCA</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>COUR D&apos;APPEL D&apos;EL JADIDA</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>COUR D&apos;APPEL DE FES</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>COUR D&apos;APPEL DE TAZA</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>COUR D&apos;APPEL DE MARRAKECH</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>COUR D&apos;APPEL DE SAFI</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>COUR D&apos;APPEL DE MEKNES</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>COUR D&apos;APPEL D&apos;ERRACHIDIA</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>COUR D&apos;APPEL D&apos;AGADIR</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>COUR D&apos;APPEL DE LAÂYOUNE</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>COUR D&apos;APPEL DE TANGER</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>COUR D&apos;APPEL DE TETOUAN</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>COUR D&apos;APPEL DE SETTAT</label>
            </value>
            <value>
                <fullName>115</fullName>
                <label>COUR D&apos;APPEL DE BENI MELLAL</label>
            </value>
            <value>
                <fullName>116</fullName>
                <label>COUR D&apos;APPEL DE KHOURIBGA</label>
            </value>
            <value>
                <fullName>117</fullName>
                <label>COUR D&apos;APPEL D&apos;OUJDA</label>
            </value>
            <value>
                <fullName>118</fullName>
                <label>COUR D&apos;APPEL DE NADOR</label>
            </value>
            <value>
                <fullName>119</fullName>
                <label>COUR D&apos;APPEL D&apos;AL HOCEIMA</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>TPI DE RABAT</label>
            </value>
            <value>
                <fullName>121</fullName>
                <label>TPI DE SALE</label>
            </value>
            <value>
                <fullName>122</fullName>
                <label>TPI DE KHEMISSET</label>
            </value>
            <value>
                <fullName>123</fullName>
                <label>TPI DE ROMMANI</label>
            </value>
            <value>
                <fullName>124</fullName>
                <label>TPI DE KENITRA</label>
            </value>
            <value>
                <fullName>125</fullName>
                <label>TPI DE SIDI KACEM</label>
            </value>
            <value>
                <fullName>126</fullName>
                <label>TPI DE SIDI SLIMANE</label>
            </value>
            <value>
                <fullName>127</fullName>
                <label>TPI DE SOUK ARBAA EL GHARB</label>
            </value>
            <value>
                <fullName>128</fullName>
                <label>TPI DE OUEZZANE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>