force-app/main/default/objects/Mission__c/fields/Lien_de_parente__c.field-meta.xml
<CustomField>
    <fullName>Lien_de_parente__c</fullName>
    <label>Lien de parenté</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lui-même</fullName>
            </value>
            <value>
                <fullName>Conjoint(e)</fullName>
            </value>
            <value>
                <fullName>Enfant</fullName>
            </value>
            <value>
                <fullName>Père</fullName>
            </value>
            <value>
                <fullName>Mère</fullName>
            </value>
            <value>
                <fullName>Frère</fullName>
            </value>
            <value>
                <fullName>Sœur</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>