force-app/main/default/objects/Mission__c/fields/Medecin_traitant__c.field-meta.xml
<CustomField>
    <fullName>Medecin_traitant__c</fullName>
    <label>Médecin traitant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>