force-app/main/default/objects/Mission__c/fields/Motif_d_hospitalisation__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_hospitalisation__c</fullName>
    <label>Motif d&apos;hospitalisation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>