force-app/main/default/objects/Mission__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expertise_medicale_AT</fullName>
                <label>Expertise médicale AT</label>
            </value>
            <value>
                <fullName>Consolidation_AT</fullName>
                <label>Consolidation AT</label>
            </value>
            <value>
                <fullName>Expertise_corporelle_RC</fullName>
                <label>Expertise corporelle RC</label>
            </value>
            <value>
                <fullName>Contre_expertise</fullName>
                <label>Contre-expertise</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>