force-app/main/default/objects/Mission__c/fields/Nature_de_dossier__c.field-meta.xml
<CustomField>
    <fullName>Nature_de_dossier__c</fullName>
    <label>Nature de dossier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Pénal</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Administratif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>