force-app/main/default/objects/Mission__c/fields/Nature_Mission__c.field-meta.xml
<CustomField>
    <fullName>Nature_Mission__c</fullName>
    <label>Nature de Mission</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branche__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacation sur siège</fullName>
            </value>
            <value>
                <fullName>Vacation sur site</fullName>
            </value>
            <value>
                <fullName>Contrôle médicale</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Procédure judiciaire</fullName>
            </value>
            <value>
                <fullName>Défense compagnie</fullName>
            </value>
            <value>
                <fullName>Transaction partenariat</fullName>
            </value>
            <value>
                <fullName>CDRA</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Procédure sociale</fullName>
            </value>
            <value>
                <fullName>Astreinte</fullName>
            </value>
            <value>
                <fullName>Saisie Arrêt</fullName>
            </value>
            <value>
                <fullName>Aggravation</fullName>
            </value>
            <value>
                <fullName>Atténuation</fullName>
            </value>
            <value>
                <fullName>Recours</fullName>
            </value>
            <value>
                <fullName>Rectification erreur matérielle</fullName>
            </value>
            <value>
                <fullName>Dépôt de chèque CDRA</fullName>
            </value>
            <value>
                <fullName>Sommation interpellative</fullName>
            </value>
            <value>
                <fullName>Évaluation préjudice RC</fullName>
            </value>
            <value>
                <fullName>Demande d&apos;expertise classique</fullName>
            </value>
            <value>
                <fullName>Demande d&apos;expertise sur document</fullName>
            </value>
            <value>
                <fullName>Demande d&apos;expertise additive</fullName>
            </value>
            <value>
                <fullName>Demande d’expertise judiciaire</fullName>
            </value>
            <value>
                <fullName>Évaluation AT</fullName>
            </value>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Prise en charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>