force-app/main/default/objects/Mission__c/fields/Nature_Mission_Medecin__c.field-meta.xml
<CustomField>
    <fullName>Nature_Mission_Medecin__c</fullName>
    <label>Nature de mission (Médecin)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacation_siege</fullName>
                <label>Vacation sur siège</label>
            </value>
            <value>
                <fullName>Vacation_site</fullName>
                <label>Vacation sur site</label>
            </value>
            <value>
                <fullName>Controle_medicale</fullName>
                <label>Contrôle médicale</label>
            </value>
            <value>
                <fullName>Vacation_AT</fullName>
                <label>Vacation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>