force-app/main/default/objects/Mission__c/fields/Nom_patient__c.field-meta.xml
<CustomField>
    <fullName>Nom_patient__c</fullName>
    <label>Nom patient</label>
    <length>80</length>
    <type>Text</type>
</CustomField>