force-app/main/default/objects/Mission__c/fields/Nom_societe__c.field-meta.xml
<CustomField>
    <fullName>Nom_societe__c</fullName>
    <label>Nom de société</label>
    <length>255</length>
    <type>Text</type>
</CustomField>