force-app/main/default/objects/Mission__c/fields/Nombre_dossiers__c.field-meta.xml
<CustomField>
    <fullName>Nombre_dossiers__c</fullName>
    <label>Nombre de dossiers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>