force-app/main/default/objects/Mission__c/fields/Numero_affilie__c.field-meta.xml
<CustomField>
    <fullName>Numero_affilie__c</fullName>
    <label>Numéro affilié</label>
    <length>50</length>
    <type>Text</type>
</CustomField>