force-app/main/default/objects/Mission__c/fields/Numero_de_chambre__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_chambre__c</fullName>
    <label>Numéro de chambre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>