force-app/main/default/objects/Mission__c/fields/Numero_de_dossier_tribunal__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_dossier_tribunal__c</fullName>
    <label>Numéro de dossier tribunal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>