force-app/main/default/objects/Mission__c/fields/Numero_mission2__c.field-meta.xml
<CustomField>
    <fullName>Numero_mission2__c</fullName>
    <description>numeroMission renvoyé par l&apos;API Poste gestionnaire (self-missionning). Utilisé pour la messagerie.</description>
    <label>Numero mission</label>
    <length>20</length>
    <type>Text</type>
</CustomField>