force-app/main/default/objects/Mission__c/fields/Numero_mission__c.field-meta.xml
<CustomField>
    <fullName>Numero_mission__c</fullName>
    <displayFormat>MSN-{YYYY}-{00000}</displayFormat>
    <label>Numéro mission</label>
    <type>AutoNumber</type>
</CustomField>