force-app/main/default/objects/Mission__c/fields/Numero_ordre_dossier__c.field-meta.xml
<CustomField>
    <fullName>Numero_ordre_dossier__c</fullName>
    <label>Numéro d&apos;ordre dossier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>