force-app/main/default/objects/Mission__c/fields/Numero_police__c.field-meta.xml
<CustomField>
    <fullName>Numero_police__c</fullName>
    <label>Numéro police</label>
    <length>50</length>
    <type>Text</type>
</CustomField>