force-app/main/default/objects/Mission__c/fields/Numero_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Numero_sinistre__c</fullName>
    <label>Numéro de sinistre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>