force-app/main/default/objects/Mission__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mission Mère</label>
    <referenceTo>Mission__c</referenceTo>
    <relationshipLabel>Missions</relationshipLabel>
    <relationshipName>Missions_Enfants</relationshipName>
    <type>Lookup</type>
</CustomField>