force-app/main/default/objects/Mission__c/fields/Personnes_impliquees__c.field-meta.xml
<CustomField>
    <fullName>Personnes_impliquees__c</fullName>
    <label>Personnes impliquées</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>