force-app/main/default/objects/Mission__c/fields/Prenom_patient__c.field-meta.xml
<CustomField>
    <fullName>Prenom_patient__c</fullName>
    <label>Prénom patient</label>
    <length>80</length>
    <type>Text</type>
</CustomField>