force-app/main/default/objects/Mission__c/fields/Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Prestataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestataire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Missions</relationshipLabel>
    <relationshipName>Missions_Prestataire</relationshipName>
    <type>Lookup</type>
</CustomField>