force-app/main/default/objects/Mission__c/fields/Rapport_depose__c.field-meta.xml
<CustomField>
    <fullName>Rapport_depose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rapport déposé</label>
    <type>Checkbox</type>
</CustomField>