force-app/main/default/objects/Mission__c/fields/Reference_dossier__c.field-meta.xml
<CustomField>
    <fullName>Reference_dossier__c</fullName>
    <label>Référence dossier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>