force-app/main/default/objects/Mission__c/fields/Reference_dossier_prestataire__c.field-meta.xml
<CustomField>
    <fullName>Reference_dossier_prestataire__c</fullName>
    <label>Référence dossier prestataire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>