force-app/main/default/objects/Mission__c/fields/ReferencePrestataire__c.field-meta.xml
<CustomField>
    <fullName>ReferencePrestataire__c</fullName>
    <label>Référence dossier prestataire</label>
    <length>100</length>
    <type>Text</type>
</CustomField>