force-app/main/default/objects/Mission__c/fields/Sinistre_non_ouvert__c.field-meta.xml
<CustomField>
    <fullName>Sinistre_non_ouvert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sinistre non ouvert</label>
    <type>Checkbox</type>
</CustomField>