force-app/main/default/objects/Mission__c/fields/Specialite__c.field-meta.xml
<CustomField>
    <fullName>Specialite__c</fullName>
    <label>Spécialité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orthopedie</fullName>
                <label>Orthopédie</label>
            </value>
            <value>
                <fullName>Neurologie</fullName>
            </value>
            <value>
                <fullName>Psychiatrie</fullName>
            </value>
            <value>
                <fullName>Medecine_generale</fullName>
                <label>Médecine générale</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>