force-app/main/default/objects/Mission__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiée</fullName>
            </value>
            <value>
                <fullName>En_cours</fullName>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Rapport_recu</fullName>
                <label>Rapport reçu</label>
            </value>
            <value>
                <fullName>Rapport_attendu</fullName>
                <label>Rapport attendu</label>
            </value>
            <value>
                <fullName>Cloturee</fullName>
                <label>Clôturée</label>
            </value>
            <value>
                <fullName>Annulee</fullName>
                <label>Annulée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>