force-app/main/default/objects/Mission__c/fields/Statut_API__c.field-meta.xml
<CustomField>
    <fullName>Statut_API__c</fullName>
    <label>Statut API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>