force-app/main/default/objects/Mission__c/fields/Type_de_mission__c.field-meta.xml
<CustomField>
    <fullName>Type_de_mission__c</fullName>
    <label>Type de mission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-missionnement</fullName>
            </value>
            <value>
                <fullName>Missionnement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>