force-app/main/default/objects/Mission__c/fields/Type_de_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Type_de_sinistre__c</fullName>
    <label>Type de sinistre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>