force-app/main/default/objects/Mission__c/fields/Type_Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Type_Prestataire__c</fullName>
    <label>Type prestataire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medecin</fullName>
                <label>Médecin</label>
            </value>
            <value>
                <fullName>Avocat</fullName>
            </value>
            <value>
                <fullName>Expert_IARDT</fullName>
                <label>Expert IARDT</label>
            </value>
            <value>
                <fullName>Expert_RD</fullName>
                <isActive>false</isActive>
                <label>Expert_RD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>