force-app/main/default/objects/Mission__c/fields/Validateur__c.field-meta.xml
<CustomField>
    <fullName>Validateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validateur</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Missions validées</relationshipLabel>
    <relationshipName>Missions_Validees</relationshipName>
    <type>Lookup</type>
</CustomField>