force-app/main/default/objects/Mission__c/recordTypes/Avocat.recordType-meta.xml
<RecordType>
    <fullName>Avocat</fullName>
    <active>true</active>
    <label>Avocat</label>
</RecordType>