force-app/main/default/objects/Mission__c/recordTypes/Clinique.recordType-meta.xml
<RecordType>
    <fullName>Clinique</fullName>
    <active>true</active>
    <label>Clinique</label>
</RecordType>