force-app/main/default/objects/Mission__c/recordTypes/Expert_RD.recordType-meta.xml
<RecordType>
    <fullName>Expert_RD</fullName>
    <active>true</active>
    <label>Expert RD</label>
</RecordType>