force-app/main/default/objects/Mission__c/recordTypes/Medecin.recordType-meta.xml
<RecordType>
    <fullName>Medecin</fullName>
    <active>true</active>
    <label>Médecin</label>
</RecordType>