force-app/main/default/objects/Mission__c/recordTypes/Opticien.recordType-meta.xml
<RecordType>
    <fullName>Opticien</fullName>
    <active>true</active>
    <label>Opticien</label>
</RecordType>