force-app/main/default/objects/Mission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Numero_mission__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>