force-app/main/default/objects/Mission__c/listViews/date_creation.listView-meta.xml
<ListView>
    <fullName>date_creation</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>date_creation</label>
</ListView>